finish up index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
                 <button type="button" class="remove">Remove</button>
             </div>
             <hr>
+            <div>
+                <span>Second book</span> <br>
+                <span>Testserro testy</span> <br>
+                <button type="button" class="remove">Remove</button>
+            </div>
+            <hr>
+            <div>
+                <input type="text" class="title" placeholder="title"> <br><br>
+                <input type="text" class="author" placeholder="author"> <br><br>
+                <button type="button" class="add">Add</button>
+            </div>
         </section>
     </main>
     <footer></footer>
