--- a/index.html
+++ b/index.html
@@ -12,18 +12,8 @@
     <main>
         <section>
             <h1>Awesome books</h1>
-            <div>
-                <span>Lorem impsum</span> <br>
-                <span>Testerro testy</span> <br>
-                <button type="button" class="remove">Remove</button>
-            </div>
-            <hr>
-            <div>
-                <span>Second book</span> <br>
-                <span>Testserro testy</span> <br>
-                <button type="button" class="remove">Remove</button>
-            </div>
-            <hr>
+            <div class="listShow"></div>
+                   
             <div>
                 <input type="text" class="title" placeholder="title"> <br><br>
                 <input type="text" class="author" placeholder="author"> <br><br>
