--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Awesome Books</title>
     <script src="/index.js" defer></script>
 </head>
 <body>
     <header></header>
     <main>
-        <section>
-            <h1>Awesome books</h1>
+        <section class="all-books">
+            <h1>All Awesome Books</h1>
             <div class="listShow"></div>
-            <div>
-                <input type="text" class="title" placeholder="title"> <br><br>
-                <input type="text" class="author" placeholder="author"> <br><br>
+        </section>
+        <hr class="horizontal-line1">
+        <section class="add-books">
+            <h1>Add A New Book</h1>
+            <div class="input-book">
+                <input type="text" class="title" placeholder="title">
+                <input type="text" class="author" placeholder="author">
                 <button type="button" class="add">Add</button>
             </div>
         </section>
