Add navigation bar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     <script src="/index.js" defer></script>
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav class="nav">
+            <span class="nav-title">Awesome Books</span>
+            <div class="nav-items">
+                <a class="list" href="#">List</a>|
+                <a class="add-new" href="#">Add new</a>|
+                <a class="contact" href="#">Contact</a>
+            </div>
+        </nav>
+    </header>
     <main>
         <section class="all-books">
             <h1>All Awesome Books</h1>
