Add contact and copyright section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="/index.js" defer></script>
 </head>
 <body>
+    <div class="wrapper"></div>
     <header>
         <nav class="nav">
             <span class="nav-title">Awesome Books</span>
@@ -33,7 +34,18 @@
                 <button type="button" class="add">Add</button>
             </div>
         </section>
+        <section class="contact-info">
+            <h1>Contact information</h1>
+            <p>Do you have any questions or you just want to say "Hello"?<br>You can reach out to us</p>
+            <ul>
+                <li>Our e-mail mail@mail.com</li>
+                <li>Our phone number: 00421987564123</li>
+                <li>Our address: Streetname 06,19921 City, Country</li>
+            </ul>
+        </section>
     </main>
-    <footer></footer>
+    <footer class="copyright">
+        <span class="copyright-text">Copyright &copy; 2021 henry-kc, aliabbani</span>
+    </footer>
 </body>
 </html>
