Add time container

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <a class="contact" href="#">Contact</a>
             </div>
         </nav>
+        <div class="time-date-container">
+            <span class="time-date"></span>
+        </div>
     </header>
     <main>
         <section class="all-books">
