Add luxon CDN to the project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Awesome Books</title>
     <script src="/index.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@2.0.2/build/global/luxon.min.js"></script>
+    <script src="/js/navigation.js" type="module" defer></script>
 </head>
 <body>
     <div class="wrapper"></div>
