--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Awesome Books</title>
     <script src="/index.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/luxon@2.0.2/build/global/luxon.min.js"></script>
-    <script src="/js/navigation.js" type="module" defer></script>
+    <script src="/js/navigation.js" defer></script>
 </head>
 <body>
     <div class="wrapper"></div>
@@ -30,7 +30,6 @@
             <h1>All Awesome Books</h1>
             <div class="listShow"></div>
         </section>
-        <hr class="horizontal-line1">
         <section class="add-books">
             <h1>Add A New Book</h1>
             <div class="input-book">
