--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Awesome Books</title>
     <script src="/index.js" defer></script>
+    <script src="/js/time.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/luxon@2.0.2/build/global/luxon.min.js"></script>
     <script src="/js/navigation.js" defer></script>
 </head>
