--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
         </section>
         <section class="add-books">
             <h1>Add A New Book</h1>
-            <div class="input-book">
-                <input type="text" class="title" placeholder="title">
-                <input type="text" class="author" placeholder="author">
+            <form class="input-book">
+                <input type="text" class="title" placeholder="title" required>
+                <input type="text" class="author" placeholder="author" required>
+                <span class="error"></span>
                 <button type="button" class="add">Add</button>
-            </div>
+            </form>
         </section>
         <section class="contact-info">
             <h1>Contact information</h1>
